# Aegis-Shadow

./: ARCHITECTURE.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS_PLAN.md  Makefile  README.md  SECURITY.md  USAGE.md  aegis-shadow-prd.md  verify-env.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  vm-test.yml
common/: Cargo.toml
common/src/: c2_parse.rs  lib.rs
defense/: Cargo.toml  build.rs
defense-ebpf/: Cargo.toml
defense-ebpf/src/: main.rs
defense/src/: error.rs  lib.rs  main.rs  ml.rs
defense/tests/: integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_c2_command.rs  fuzz_c2_packet.rs
integration-tests/: Cargo.toml
integration-tests/tests/: adversarial.rs
offense/: Cargo.toml  build.rs
offense-ebpf/: Cargo.toml
offense-ebpf/src/: antiforensics.rs  behavioral_ai.rs  bpf_parasitism.rs  c2.rs  container_lateral.rs  deadman_switch.rs  dma_covert.rs  evasion.rs  exfil.rs  hardware.rs  hypervisor.rs  kernel_evasion.rs  kernel_object.rs  main.rs  maps.rs  memory.rs  network_covert.rs  network_stealth.rs  persistence.rs  persistence_advanced.rs  persistence_advanced2.rs  phantom_stack.rs  polymorphic.rs  supply_chain.rs  tampering.rs
offense/src/: error.rs  lib.rs  main.rs
offense/tests/: integration.rs
tests/: test_defense.sh  test_offense.sh  vm-harness.sh
tests/lib/: harness-utils.sh
verification/: Cargo.toml
verification/src/: coverage.rs  lib.rs  proofs.rs
xtask/: Cargo.toml
xtask/src/: main.rs
