[workspace]
resolver = "2"
members = [
    "common",
    "offense",
    "offense-ebpf",
    "defense",
    "defense-ebpf",
    "xtask",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }