[workspace]
resolver = "2"
members = [
    "common",
    "offense",
    "offense-ebpf",
    "defense",
    "defense-ebpf",
    "xtask",
    "integration-tests",
    "verification",
]
exclude = ["fuzz"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }