[package]
name = "defense"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
clap = { workspace = true }
common = { path = "../common", features = ["user"] }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
aya-tool = "0.12"