[package]
name = "defense"
version = "0.1.0"
edition = "2021"

[lib]
name = "defense"
path = "src/lib.rs"

[[bin]]
name = "defense"
path = "src/main.rs"
required-features = ["ebpf-bin"]

[features]
default = []
ebpf-bin = []

[dependencies]
anyhow = { workspace = true }
aya = { version = "~0.13", features = ["async_tokio"] }
aya-log = "0.2"
clap = { workspace = true }
common = { path = "../common", features = ["user"] }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
bytes = "1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

