[package]
name = "offense"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aya = { version = "~0.13", features = ["async_tokio"] }
aya-log = "0.2"
clap = { workspace = true }
common = { path = "../common", features = ["user"] }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
bytes = "1"
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal"] }

